fix overflow

--- a/Homework 3 & 4/skotels-front-main/src/app-module/about/about.component.css
+++ b/Homework 3 & 4/skotels-front-main/src/app-module/about/about.component.css
@@ -2,6 +2,7 @@
   height: 100%;
   top:200px;
   text-align: center;
+  overflow-y: scroll;
 }
 .pictures {
   width: 100%;
